
[package]
name = "forced_random_dithering"
version = "0.1.0"
authors = ["Ali <alexander.antoshuk@gmail.com>"]
keywords = ["sampling", "bluenoise", "dithering"]
description = "Library for generating dithering matrix"
readme = "README.md"
exclude = ["images/*", "Cargo.png"]
edition = "2018"


[dependencies]
rayon = "^1.5"
# lazy_static = "^1.4"
fastrand = "^1.5"
unchecked-index ="^0.2"


# [dev-dependencies]
# criterion = "^0.3"
# obj = "^0.10"

# [[bench]]
# name = "benchmark"
# harness = false